--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
@@ -27,7 +30,8 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^3.1.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
